--- a/user_progress.html
+++ b/user_progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Skill-It: My Skills </title>
+    <title> Skill-It: Friend's Skills </title>
     <link rel="stylesheet" type="text/css" href="skills.css"/>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
