--- a/user_progress.html
+++ b/user_progress.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Skill-It: Friend's Skills </title>
-    <link rel="stylesheet" type="text/css" href="skills.css"/>
+    <title> Skill-It: Michael's Progress </title>
+    <!-- <link rel="stylesheet" type="text/css" href="skills.css"/> -->
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -34,11 +34,16 @@
         </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid">
+<!--    <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Michael's Progress</h1>
+        <h1 class="display-4">My Skills</h1>
       </div>
-    </div>
+    </div> -->
+
+    <div class="header">
+        <h1 class="title-layouts">
+          <span class="fa fa-object-group" aria-hidden="true"></span>Michael's Progress</h1>
+      </div>
 
      <div class="modal fade" id="goal-setting-modal" role="dialog">
        <div class="modal-dialog " role="document">
@@ -62,11 +67,8 @@
         </div>
     </div>
 
-    <div class="container">
-      <!-- <ul class="nav nav-tabs">
-        <li role="presentation" class="active" id="user-progress-li"><a href="#" id="user-progress-a">My Progress</a></li>
-        <li role="presentation" id="friend-progress-li"><a href="#" id="friend-progress-a">Friends' Progress</a></li>
-      </ul> -->
+    <div class="middle">
+        <div class="img-thumbnail">
 
       <div class="user-progress-menu">
 
@@ -94,12 +96,10 @@
                     <p>He spent <span id = "spentHour1">132</span> hours</p>
                     <p><span id = "remainHour1">68</span> more hours to master</p>
                   </div>
-                    <canvas id="lineChart1" width="40" height="40"></canvas>
+                    <canvas id="lineChart1" width="40" height="30"></canvas>
                     <form class = "hour-update-form" action="#">
                       <p style="margin-left: 20px;">Chris said: Good job, Michael!</p>
                       <p style="margin-left: 20px;">Mary said: Fantastic, Michael! You should play next time.</p>
-                      <!-- <input type="text" class="form-control text-hour" placeholder="hours you spent today" id="text-hour1">
-                      <button type ="button" class ="btn btn-primary update-btn" id="update-btn1"> Submit </button> -->
                       <input type="text" class="form-control text-hour" placeholder="Enter your comment here" id="comment">
                       <button type ="button" class ="btn btn-primary update-btn" id="comment_submit"> Submit </button>
                     </form>
@@ -129,11 +129,9 @@
                     <p>He spent <span id = "spentHour2">15</span> hours</p>
                     <p><span  id = "remainHour2">60</span> more hours to master</p>
                   </div>
-                  <canvas id="lineChart2" width="40" height="40"></canvas>
+                  <canvas id="lineChart2" width="40" height="30"></canvas>
                   <form class = "hour-update-form" action="#">
-                     <!--  <input type="text" class="form-control text-hour" placeholder="hours you spent today" id="text-hour2">
-                      <button type ="button" class ="btn btn-primary update-btn" id="update-btn2"> Submit </button>
- -->                  <p style="margin-left: 20px;">John said: Good job, Michael!</p>
+                      <p style="margin-left: 20px;">John said: Good job, Michael!</p>
                       <p style="margin-left: 20px;">Susan said: Fantastic, Michael! You should play next time.</p>
                       <input type="text" class="form-control text-hour" placeholder="Enter your comment here" id="comment">
                       <button type ="button" class ="btn btn-primary update-btn" id="comment_submit"> Submit </button>
@@ -141,41 +139,16 @@
                 </div>
             </div>
         </div>
-        </div>
+     </div>
+  </div>
+</div>
 
-        <!-- <div class="friend-progress-menu">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <h4><i class="fa fa-trophy"></i> Michael has mastered fencing!</h4>
-            08/27 - <a href="user_progress.html">Michael</a> has been fencing for over fifty days, mastering over three techniques.
-          </li>
-
-          <li class="list-group-item">
-            <h4><i class="fa fa-star-half"></i> Greg started baking today!!</h4>
-            <a href="#"> Click here </a> to view <a href="#">Greg</a>'s recently baked cupcake!</p>
-          </li>
-
-          <li class="list-group-item">
-            <h4><i class="fa fa-trophy"></i> Join Matt at honing soccer skills</h4>
-            Want to learn how to dribble like Neymar? Ask <a href="#">Matt</a>, who's handling the dribbling skill well!
-          </li>
-
-          <li class="list-group-item">
-            <h4><i class="fa fa-star"></i> Want to learn to play the violin? Talk to Julia</h4>
-            Listen to some soothing Chopin as <a href="#">Julia</a> truly excels.
-          </li>
-
-          <li class="list-group-item">
-            <h4><i class="fa fa-trophy"></i> Hit a hole in one with Freddy</h4>
-            We're very impressed with <a href="#">Freddy</a>, is he the next Tiger Woods?
-          </li>
-        </ul>
-        </div> -->
-    </div>
+  <div class="footer">
     <div class="copyright text-center">
-        <p>© 2018 Skill list All rights reserved | Design by NU students
+        <p>@2018 Skill list All rights reserved | Design by NU students
         </p>
     </div>
+</div>
 
     <script type="text/javascript" src="progress.js"></script>
 </body>
