--- a/user_progress.html
+++ b/user_progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Skill-It: Friend's Skills </title>
+    <title> Skill-It: Michael's Skills </title>
     <link rel="stylesheet" type="text/css" href="skills.css"/>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -68,6 +68,7 @@
     </div>
 
     <div class="middle">
+      <!-- <div class="img-thumbnail"> -->
       <!-- <ul class="nav nav-tabs">
         <li role="presentation" class="active" id="user-progress-li"><a href="#" id="user-progress-a">My Progress</a></li>
         <li role="presentation" id="friend-progress-li"><a href="#" id="friend-progress-a">Friends' Progress</a></li>
@@ -100,7 +101,7 @@
                     <p><span id = "remainHour1">68</span> more hours to master</p>
                   </div>
                     <canvas id="lineChart1" width="40" height="25"></canvas>
-                      <div class="thumbnail">
+                      <div class="thumbnail chat">
                       <div class="container">
                       <p><b>Chris:</b> Good job, Michael!</p>
                       <p><b>Mary:</b> Fantastic, Michael! You should play next time.</p>
@@ -144,7 +145,7 @@
                       <button type ="button" class ="btn btn-primary update-btn" id="update-btn2"> Submit </button>
 
  -->
-                      <div class=thumbnail>
+                      <div class="thumbnail chat">
                       <div class="container">
                       <p><b>John:</b> Good job, Michael!</p>
                       <p><b>Susan:</b> Fantastic, Michael! You should sell your craftwork!</p>
@@ -188,6 +189,7 @@
         </ul>
         </div> -->
     </div>
+  <!-- </div> -->
     <div class="footer">
     <div class="copyright text-center">
         <p>© 2018 Skill list All rights reserved | Design by NU students
