Added like icons to like buttons

--- a/guitarpost.html
+++ b/guitarpost.html
@@ -67,7 +67,7 @@
             </p>
             <p>I uploaded 2 pictures of what the apps looks like when you open them up just to give you a sneak peak :)
             </p>
-            <button type="button" class="btn btn-success" href="#">Like</button>
+            <button type="button" class="btn btn-success" href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>
             <p></p>
             <div class="thumbnail">
               <div class="row">
