--- a/dancingpost.html
+++ b/dancingpost.html
@@ -65,7 +65,7 @@
               <br/>
               Check out this <a href="https://www.wikihow.com/Moonwalk">article</a> to learn how to do the moonwalk. It helped me a ton! The video <a href="https://youtu.be/E_FzgtLVzbI">here</a> is pretty aweseome too.
             </p>
-            <button type="button" class="btn btn-success" href="#">Like</button>
+            <button type="button" class="btn btn-success" href="#"><i class="glyphicon glyphicon-thumbs-up"></i> Like</button>
             <p></p>
             <div class="thumbnail">
               <div class="row">
