Changed user name

--- a/user_progress.html
+++ b/user_progress.html
@@ -95,7 +95,7 @@
                       <div class="thumbnail chat">
                       <div class="container">
                       <p class="input_comment"></p>
-                      <p><b>Chris:</b> Good job, Michael!</p>
+                      <p><b>Bruce:</b> Good job, Michael!</p>
                       <p><b>Mary:</b> Fantastic, Michael! You should play next time.</p>
                     </div>
                   </div>
