--- a/skills_list_after.html
+++ b/skills_list_after.html
@@ -18,8 +18,9 @@
         document.getElementById("div1").style.display="none";
         document.getElementById("div2").style.display="none";
         document.getElementById("div3").style.display="none";
-        // document.getElementById("div4").style.display="none";
-        // document.getElementById("div5").style.display="none";
+        document.getElementById("div8").style.display="none";
+        document.getElementById("div4").style.display="none";
+        document.getElementById("div5").style.display="none";
         // document.getElementById("div6").style.display="none";
         // document.getElementById("div7").style.display="none";
         // document.getElementById("div8").style.display="none";
@@ -87,6 +88,17 @@
         <br><br><br><br>
         <div class="wthreeproductdisplay">
             <div class="row">
+            <div id="div8" class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                  <a href="dancing_before.html"><img src="images/d6.jpg" alt="img"></a>
+                  <div class="caption">
+                    <h3>Dance</h3>
+                    <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+                  </div>
+                </div>
+              </div>
               <div id="div1" class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <img src="images/d5.jpg" alt="img">
@@ -110,7 +122,9 @@
                   </div>
                 </div>
               </div>
-              <div id="div3" class="col-sm-6 col-md-4">
+            </div>
+            <div class="row">
+                <div id="div3" class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <img src="images/d8.jpg" alt="img">
                   <div class="caption">
@@ -121,8 +135,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="row">
               <div id="div4" class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <img src="images/d4.jpeg" alt="img">
@@ -145,7 +157,9 @@
                   </div>
                 </div>
               </div>
-              <div id="div6" class="col-sm-6 col-md-4">
+            </div>
+            <div class="row">
+                <div id="div6" class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <img src="images/d3.jpg" alt="img">
                   <div class="caption">
@@ -156,8 +170,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="row">
               <div id="div7" class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                   <a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
@@ -169,17 +181,7 @@
                   </div>
                 </div>
               </div>
-              <div id="div8" class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                  <a href="dancing_before.html"><img src="images/d6.jpg" alt="img"></a>
-                  <div class="caption">
-                    <h3>Dance</h3>
-                    <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
-                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
-                  </div>
-                </div>
-              </div>
+
             </div>
         </div>
     <!-- //cart's-Product-Display -->
